--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <button onclick="toggleContenido('problema')">Mostrar/Ocultar contenido</button>
       <div class="contenido" id="problema">
         <p>
-            Los principales consumidores del negocio son personas de 45 años en adelante, por lo cual los diseños son atractivos para el consumidor, sin embargo se genero una problematica, el cual es la comodidad del consumidor al llevar puesto el calzado durante horas, lo cual genera incomodidad y cansancio en los pies y esto genera un disgusto por parte del consumidor.
+            Los principales consumidores del negocio son personas de 45 años en adelante, por lo cual los diseños son atractivos para el consumidor, sin embargo surge una problematica, el cual es la comodidad del consumidor al llevar puesto el calzado durante horas, por consecuencia se presenta disgusto por parte del consumidor.
         </p>
       </div>
     </section>
