--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ img { width:90px; height: auto; }
 
   <header>
     
-    <img src="logotipo paso.png" alt="Icono de calzado" class="icono-titulo">
+    <img src="logotipo paso.png" class="icono-titulo">
     <div class="icono-titulo">
         
     <h1>Pasos Firmes</h1>
