--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ img { width:90px; height: auto; }
       <button onclick="toggleContenido('problema')">Mostrar/Ocultar contenido</button>
       <div class="contenido" id="problema">
         <p>
-            Los principales consumidores del negocio son personas de 45 años en adelante, por lo cual los diseños son atractivos para el consumidor, sin embargo surge una problematica, el cual es la comodidad del consumidor al llevar puesto el calzado durante horas, por consecuencia se presenta disgusto por parte del consumidor.
+            Los principales consumidores del negocio son personas de 45 años en adelante, por lo que los diseños son visualmente atractivos, sin embargo surge una problematica, la cual es la comodidad del consumidor tras un uso prolongado del calzado, por consecuencia se presenta inconformidad y afecta el nivel de satisfacción.
         </p>
       </div>
     </section>
